--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Flawless Box</title>
-  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css'><link rel="stylesheet" href="dist/style.css">
+  <title>Flawless Box | Home</title>
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css'>
+   <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
@@ -27,7 +28,7 @@
                <a class="nav-link" href="#brand">COMING SOON</a>
             </li>
             <li class="nav-item">
-               <a class="nav-link" href="https://codepen.io/itselfcg/full/KKzKzQm" target="_blank">WIKI</a>
+               <a class="nav-link" href="wiki.php" target="_blank">WIKI</a>
             </li>
          </ul>
       </div>
@@ -385,7 +386,8 @@
 <!-- partial -->
   <script src='https://code.jquery.com/jquery-3.0.0.min.js'></script>
 <script src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js'></script><script  src="dist/script.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js'></script>
+<script  src="js/script.js"></script>
 
 </body>
 </html>
